# popgym

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  python-app.yml  tests
docs/source/: api.rst  baselines_quickstart.rst  conf.py  environment_quickstart.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/source/_autosummary/: popgym.baselines.models.aggregations.rst  popgym.baselines.models.embeddings.rst  popgym.baselines.models.fwp.rst  popgym.baselines.models.indrnn.rst  popgym.baselines.models.linear_attention.rst  popgym.baselines.models.lmu.rst  popgym.baselines.models.rst  popgym.baselines.models.s4d.rst  popgym.baselines.ppo.rst  popgym.baselines.ray_models.base_model.rst  popgym.baselines.ray_models.ray_diffnc.rst  popgym.baselines.ray_models.ray_elman.rst  popgym.baselines.ray_models.ray_frameconv.rst  popgym.baselines.ray_models.ray_framestack.rst  popgym.baselines.ray_models.ray_fwp.rst  popgym.baselines.ray_models.ray_gru.rst  popgym.baselines.ray_models.ray_indrnn.rst  popgym.baselines.ray_models.ray_linear_attention.rst  popgym.baselines.ray_models.ray_lmu.rst  popgym.baselines.ray_models.ray_lstm.rst  popgym.baselines.ray_models.ray_mlp.rst  popgym.baselines.ray_models.ray_s4d.rst  popgym.baselines.ray_models.rst  popgym.baselines.rst  popgym.core.deck.rst  popgym.core.env.rst  popgym.core.maze.rst  popgym.core.observability.rst  popgym.core.rst  popgym.core.wrapper.rst  popgym.envs.autoencode.rst  popgym.envs.battleship.rst  popgym.envs.concentration.rst  popgym.envs.count_recall.rst  popgym.envs.higher_lower.rst  popgym.envs.labyrinth_escape.rst  popgym.envs.labyrinth_explore.rst  popgym.envs.minesweeper.rst  popgym.envs.multiarmed_bandit.rst  popgym.envs.noisy_stateless_cartpole.rst  (+13 more)
docs/source/_templates/: module_summary.rst
examples/: instantiate_env.py  play_battleship.py  play_blackjack.py  play_cartpole.py  play_concentration.py  play_count_recall.py  play_higherlower.py  play_labyrinth_escape.py  play_labyrinth_explore.py  play_minesweeper.py  play_pendulum.py
popgym/: __init__.py
popgym/baselines/: __init__.py  ppo.py
popgym/baselines/models/: aggregations.py  embeddings.py  fwp.py  indrnn.py  lmu.py  s4d.py  (+1 more)
popgym/core/: __init__.py  deck.py  env.py  maze.py  observability.py  popgym_env.py  wrapper.py
popgym/envs/: __init__.py  autoencode.py  battleship.py  bipedal_walker.py  blackjack.py  carflag.py  concentration.py  count_recall.py  higher_lower.py  irregular_stateless_cartpole.py  irregular_stateless_pendulum.py  labyrinth_escape.py  labyrinth_explore.py  minesweeper.py  multiarmed_bandit.py  noisy_position_only_cartpole.py  noisy_position_only_pendulum.py  noisy_stateless_cartpole.py  noisy_stateless_pendulum.py  nonstationary_bandit.py  popgym_env.py  position_only_cartpole.py  position_only_pendulum.py  repeat_first.py  repeat_previous.py  stateless_cartpole.py  stateless_pendulum.py  velocity_only_cartpole.py
popgym/util/: __init__.py  benchmark.py  definitions.py  offline_dataset.py
popgym/wrappers/: __init__.py  antialias.py  antialias_wrapper.py  discrete_action.py  flatten.py  last_action_wrapper.py  markovian.py  observability_wrapper.py  previous_action.py
tests/: base_env_test.py  compute_framerate.py  notest_bipedal_walker.py  test_autoencode.py  test_bandits.py  test_battleship.py  test_blackjack.py  test_concentration.py  test_count_recall.py  test_deck.py  test_envs.py  test_higher_lower.py  test_labyrinth_escape.py  test_labyrinth_explore.py  test_minesweeper.py  test_multiarmed_bandit.py  test_ppo.py  test_repeat_first.py  test_repeat_previous.py  test_utils.py  test_wrappers.py
(+13 files in other folders)
