[metadata]
name = popgym
description = A collection of partially-observable procedural gym environments
author = Steven Morad
version = 0.0.2
license = MIT
readme = README.md
# Remove 3.10 limit when mazelib fixes its build process
# to work with 3.11
requires-python = >=3.7 <=3.10
keywords = gym, pomdp, partially observable, reinforcement learning, rl

[options]
packages = find:
install_requires = 
    numpy
    gymnasium
    mazelib

[options.extras_require]
baselines = 
    torch
    opt_einsum
    wandb
    dnc
    einops
    ray[rllib]==2.0.0
