[metadata]
name = popgym
description = A collection of partially-observable procedural gym environments
long_description = file: README.md
long_description_content_type = text/markdown
author = Steven Morad
version = 1.0.1
license = MIT
readme = README.md
requires-python = >=3.7 <=3.10 # Remove 3.10 limit when mazelib fixes its build process
keywords = gym, gymnasium, pomdp, partially observable, reinforcement learning, rl

[options]
packages = find:
install_requires = 
    numpy
    gymnasium

[options.extras_require]
navigation =
    mazelib
baselines = 
    torch
    opt_einsum
    wandb
    dnc
    einops
    ray[rllib]==2.3.0
